syntax = "proto2";

import "Enum.proto";
import "Structure.proto";

option optimize_for = SPEED;

message VERSION_RES
{
    optional PROTOCOL   id                  	= 1 [default = ID_PKT_VERSION_RES  ];
    optional  float   var_version         	= 2;
    optional  ErrorCode    var_code         	= 3;
}


message LOGIN_RES
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_LOGIN_RES];

    optional  ErrorCode    var_code         = 2;

    optional  int64      var_index         = 3;


    optional int32	 var_win 		= 4;
    optional int32	 var_lose 		= 5;
    optional int32	 var_draw 		= 6;
    optional int32	 var_score 		= 7;
    optional int32	 var_rank		= 8;
    optional int32	 var_level		= 9;
    optional bytes   var_locale     = 10;
    optional bytes   var_name       = 11;
}

message CREATE_ROOM_RES
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_CREATE_ROOM_RES ];
    optional bytes var_name                  = 2;
    optional int32  var_room_id               = 3; 
    optional  ErrorCode    var_code         = 4;
}

message ENTER_ROOM_RES
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_ENTER_ROOM_RES ];
    optional bytes var_name                   = 2;
    optional int32  var_room_id               = 3; 
    optional  ErrorCode    var_code         = 4;
}
 
 message NEW_USER_IN_ROOM_NTY
{
    optional PROTOCOL   id                        = 1 [default = ID_PKT_NEW_USER_IN_ROOM_NTY ];
    optional RoomUserInfo var_room_user     = 2;
    optional  ErrorCode    var_code               = 3;
}

message LEAVE_ROOM_RES
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_LEAVE_ROOM_RES ];
    optional bytes var_name                  = 2;
    optional  ErrorCode    var_code         = 3;
    optional  int64    var_index	             = 4;
}

message ROOM_LIST_RES
{
    optional  PROTOCOL   id                 = 1 [default = ID_PKT_ROOM_LIST_RES];
    optional  ErrorCode    var_code         = 2;
    repeated RoomInfo2 var_room_list 	     = 3;
}

message MATCH_RES
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_MATCH_RES ];
    optional  ErrorCode    var_code         = 2;
}

 message GAME_RESULT_NTY
{
    optional PROTOCOL   	id                        = 1 [default = ID_PKT_GAME_RESULT_NTY ];
    optional  int64    		var_index	            = 2;
    optional bytes 		var_name              = 3;
    optional  ErrorCode    	var_code               = 4;
    optional eTeam  		var_color               = 5;

    optional  int64    		var_index_1	 = 6;
    optional int32 		var_level_1                = 7;
    optional int32 		var_level_point_1        = 8;

    optional  int64    		var_index_2	 = 9;
    optional int32 		var_level_2                = 10;
    optional int32 		var_level_point_2        = 11;

}


message RANK_RES
{
    optional PROTOCOL   id                        = 1 [default = ID_PKT_RANK_RES  ];
    repeated Rank var_rank_list     = 2;
    optional  ErrorCode    var_code               = 3;
}

message QNS_RES
{
    optional PROTOCOL   id                        = 1 [default = ID_PKT_QNS_RES   ];
    optional  ErrorCode    var_code               = 3;
}

message ROOM_PASS_THROUGH_RES
{
    optional PROTOCOL   id                        = 1 [default = ID_PKT_ROOM_PASS_THROUGH_RES    ];
    optional  ErrorCode    var_code         = 2;
    required bytes     var_message    	     = 3;
    required int32     var_message_int         = 4;
}

message CANCEL_MATCH_RES
{
    optional PROTOCOL   id                        = 1 [default = ID_PKT_CANCEL_MATCH_RES    ];
}



message NOTICE_RES
{
    optional PROTOCOL   id                        = 1 [default = ID_PKT_NOTICE_RES    ];
    required bytes     var_message    	     = 2;
}

message CHECK_NICKNAME_RES
{
    optional PROTOCOL   id                        = 1 [default = ID_PKT_CHECK_NICKNAME_RES    ];
    optional  ErrorCode    var_code         = 2;
    required bytes     var_name    	     = 3;
}

message BITMAP_MESSAGE_RES
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_BITMAP_MESSAGE_RES ];
    optional  ErrorCode    var_code         = 2;
    repeated bytes     var_message          = 3;
    optional bytes     var_name	            = 4;
}

message AUDIO_MESSAGE_RES
{
    optional PROTOCOL   id                  = 1 [default = ID_PKT_AUDIO_MESSAGE_RES ];
    optional  ErrorCode    var_code         = 2;
    repeated bytes     var_message          = 3;
    optional bytes     var_name	            = 4;
}